# sip_message_client

./: .gitignore  Makefile  README.md  __init__.py  example.py  pyproject.toml
cmd/: sip_message.py
core/: sip_message.py  sip_server.py  sip_server_response.py
scripts/: install_command_line.py  install_command_line.sh  sip_message_command.py
sip_message_client/core/: sip_message.py  sip_server_response.py
src/sip_message_client/core/: sip_message.py  sip_server_response.py
